@startuml

hide circle
skinparam classattributeiconsize 0
skinparam classFontStyle bold

class Persona {
   - apeNom: string
   - nif: string
}

class Contrato {
   - fechaDeAlta: int {Formato: YYYYMMDD}
   - mesesPermanencia: int
   - cuentaBancaria: string
   - activo: bool
   + addProducto ( p: Producto )
}

class Producto {
   # precioMensual: float
   + Producto ( precio: float )
}

class ConexionInternet {
   - tipo: string
   - velocidadMB: int
}

class Canal {
   - nombre: string
}

class PaqueteDeCanales {
   - descuento: float
   + addCanal ( c: Canal )
}

class Contenedor<T>{
   - elementos[MAX_TAM]: T
   - numElementos: int
   - maxElementos: int
   - vacio: T
   - compactar ( inicio: int )
   + Contenedor ( tamMaximo: int, vVacio: T = T() )
   + addElemento ( nE: T )
   + getElemento ( cual: int ): T
   + sacaElemento ( cual: int ): T
   + getNumElementos (): int
   + operator= ( otro: Contenedor )
   + vaciar ()
}

class ContenedorProductos<Producto*>{}

class ContenedorCanales<Canal*>{}

Contrato -- "1\nabonado" Persona: >
Producto <|-- ConexionInternet 
Producto <|-- Canal
Producto <|-- PaqueteDeCanales
Contenedor <|..  "<<bind>> <T-> Canal*>" ContenedorProductos
Contenedor <|.. "<<bind>> <T-> Canal*>" ContenedorCanales
Contrato *-- ContenedorProductos
ContenedorProductos *-- "1..10" Producto
PaqueteDeCanales *-- ContenedorCanales
ContenedorCanales *-- "1..5" Canal

class PooFusionExc<<Exception>> {
   - fichero: string
   - función: string
   - mensaje: string
}
note bottom of PooFusionExc
   Todas las clases lanzan
   excepciones de este tipo
   salvo Contenedor
end note

note as Nota1
   El diagrama no incluye constructores
   por defecto y de copia, destructores,
   setters y getters

   Los tipos, salvo casos concretos, no
   llevan & ni *, pero a la hora de
   implementar sí hay que ponerlos ;-).
   Está así por hacer que el UML sea lo
   más "ajeno" posible al lenguaje de
   programación
end note

@enduml